--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ main {
 .logo {
   margin-left: 8rem;
   margin-top: 3rem;
-
 }
 
 .left-container {
@@ -29,6 +28,35 @@ main {
   width: 71%;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.history-container {
+  flex-direction: column;
+  position: absolute;
+  height: 100vw;
+  width: 20vw;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(9px);
+  color: #f1f1f1;
+  border-right-width: 5px;
+  border-right-color: rgba(255, 255, 255, 0.14);
+  border-right-style: solid;
+}
+
+h1 {
+  margin-top: 3rem;
+}
+.close-btn {
+  position: absolute;
+  top:  5px;
+  right: 5px;
+  display: flex;
+  justify-content: flex-end;
+  background-color: rgba(0, 0, 0, 0.25);
+  color: white;
+  border-color: white;
 }
 
 .info-block-container {
@@ -52,7 +80,6 @@ main {
   padding-left: 1rem;
   margin: 0px;
   margin-right: 5px;
- 
 }
 
 .town-date {
@@ -131,8 +158,28 @@ input[type="text"] {
   font-weight: bold;
   line-height: 24.44px;
   color:rgba(255, 255, 255, 0.7);
-  padding-bottom: 3rem;
   outline: none;
+}
+
+.weather-history {
+  background-color: darkgray;
+  color: rgba(255, 255, 255, 1);
+  display: inline-block;
+  cursor: pointer;
+  margin-top: 0.5rem;
+  border: none;
+}
+
+.weather-history:hover {
+  background-color: rgba(255, 255, 255, 0.295);
+  color: black;
+}
+
+.cities {
+  font-weight: 400;
+  size: 18px;
+  line-height: 21.09px;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .weather-details {
@@ -190,7 +237,7 @@ input[type="text"] {
 }
 
 .forecast {
-  margin-top: 41px;
+  margin-top: 10px;
 }
 
 .forecast {
@@ -219,4 +266,7 @@ input[type="text"] {
   font-size: 24px;
   line-height: 28.13px;
   color: rgba(255, 255, 255, 0.7);
+}
+.hidden {
+  display: none;
 }
